# photos-processing

./: .env  .env.github  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yml  logging.yaml  pyproject.toml  pytest.ini
.github/workflows/: quality-checks.yaml
alembic/: env.py  manual.py  script.py.mako
alembic/versions/: 01d149d925d2_.py  0b841aba5668_change.py  0dcce6564b44_.py  17658c670031_.py  17780661d461_change.py  1cb865e2147a_.py  246a64605950_change.py  28a5bd29d1c9_.py  35f1a28f50b5_change.py  4746e0a3b3a0_change.py  492117b96b2f_change.py  4b48f67ad672_change.py  6e8ca8375e53_change.py  71d1e8ff741b_change.py  79565462b99b_.py  79701391bf14_.py  7e289d3a4a30_change.py  7ef1704795f9_.py  8adad586e0bd_change.py  8da031102402_.py  92941e32b268_change.py  99f1738c816d_.py  a503fbc1fb69_.py  a5040acf49b7_.py  a76fc3f9b482_.py  ad9a9b9fbc2b_change.py  b21bdf97abf7_.py  b3915d645963_change.py  d0932ff5392b_change.py  dac3b1cf98ba_change.py  ded1d117ef4e_.py  ed079db68d18_change.py  ee6362ba6be6_change.py  f5175e57e78e_.py  f77dd4864b37_change.py  f86b1be6f097_change.py  fba277c9e6a6_.py
app/: config.py  main.py
app/config/: app_config.py  config_types.py  process_state.py
app/data/: image_models.py
app/data/database/: database.py  db_utils.py  image_operations.py  migrations.py
app/data/enums/: activity_type.py  animal_type.py  event_type.py  face_sex.py  object_type.py  weather_condition.py
app/data/interfaces/: auth_types.py  image_data.py  image_info_types.py  ml_types.py  response_types.py  visual_data.py  visual_information.py
app/data/models/: image_models.py
app/machine_learning/: utils.py
app/processing/: generate_thumbnails.py  process_image.py  process_one.py  process_utils.py
app/processing/assets/: scenes.json
app/routers/: job_router_factory.py
app/server/: host_thumbnails.py  lifespan.py
backend/: Dockerfile  alembic.ini
backend/photos/: 3rd_party_auth.py  basic_photos.py  database.py  server.py
photos/: interfaces.py  main.py  utils.py
photos-processing/: Dockerfile  TODO.md  pyproject.toml
photos-processing/photos/: interfaces.py  main.py  server_api.py  utils.py
photos-processing/photos/config/: app_config.py  process_config.py
photos-processing/photos/image_modules/: base_info.py  exif.py  generate_thumbnails.py  thumbnails.py
photos-processing/photos/ingest/: ingest_watch.py  process_image.py
photos-server/: .pre-commit-config.yaml  Dockerfile  TODO.md  alembic.ini  mypy.ini  pyproject.toml
photos-server/alembic/: env.py
photos-server/alembic/versions/: 2234957fe057_change.py  4a3b2f24e740_change.py  4c8739eee700_initial.py  55d2ee8631e2_remove_thumbnails.py  6ca122218981_initial.py  6ee654e09e2b_change.py  8dfae7cf47fc_add_gps_time_column.py  bc61bdd559fa_better_json.py  d6e8af1c2fb5_add_time_and_gps.py  de5472a74464_initial_setup.py  eeb19951d58e_add_info_to_image_info_model.py
photos-server/photos/: database.py  environment.py  interfaces.py  main.py  server.py  types.py
photos-server/photos/config/: app_config.py
photos-server/photos/database/: database.py  models.py
photos-server/photos/image_modules/: base_info.py  exif.py  gps.py  thumbnails.py  time_taken.py
photos-server/photos/ingest/: ingest_watch.py  process_directory.py  process_image.py  watch_directory.py
photos-server/photos/routers/: images.py
photos/config/: app_config.py  process_config.py
photos/database/: database.py  migrations.py  models.py
photos/image_modules/: base_info.py  exif.py  gps.py  thumbnails.py  time_taken.py
photos/ingest/: dangle_removers.py  fix_timezone.py  process_directory.py  process_directory_utils.py  process_image.py  watch_directory.py
photos/machine_learning/: utils.py
photos/processing/: process_image.py  process_media.py  process_utils.py
photos/routers/: auth.py  health.py  images.py
photos/server/: host_thumbnails.py  lifespan.py
postgres/: Dockerfile  configure-postgres.sh
ruurd-photos-backend/: Dockerfile  TODO.md  alembic.ini  pyproject.toml
ruurd-photos-backend/alembic/: env.py
ruurd-photos-backend/config/: .env  .env.dev
ruurd-photos-backend/photos/: basic_photos.py  constants.py  environment.py  server.py
ruurd-photos-backend/scripts/: setup_env.ps1
scripts/: checks.ps1  clear_db.py  clip_text_and_image_embeddings.py  copy_sample_photos.py  image_caption.py  image_classification.py  image_segmentation.py  llama_create_embeddings.py  llama_vision.py  mmap.py  motion_photo.py  object_detection.py  object_detection2.py  pic2pic.py  pyproject.toml  question_image.py  setup_env.ps1
scripts/ai_scripts/: InternVL.py  blip_image_caption.py  check_if_image_has_text.py  clip_rust_compare.py  clip_search_image_semantically.py  clip_text_and_image_embeddings.py  export_clip_onnx.py  export_onnx.py  face_insight.py  image_caption.py  image_classification.py  image_segmentation.py  image_to_argb.py  image_to_theme.py  inpainting.py  inpainting_stable_diffusion.py  llama.py  llama_create_embeddings.py  llama_vision.py  motion_photo.py  object_detection.py  object_detection2.py  opensource_clip.py  pic2pic.py  pytesseract_ocr.py  quality_detection_module.py  question_image.py  qwen25vl.py  sana.py  scene_classification.py  sigLIP.py  stable_diffusion.py  text_to_image_similarity.py  unstructured_ocr.py  visualize_dynamic_theme.py  visualize_prominent_colors.py
scripts/ai_scripts/ben2/: BEN2.py  ben2_script.py
scripts/ai_scripts/clip_rust/: export_onnx.py  hf_image_compare.py  hf_search_image_semantically.py  image_compare.py  onnx_image_compare.py  onnx_search_image_semantically.py  onnx_text_compare.py  text_compare.py
src/: 3rd_party_auth.py  basic_photos.py  constants.py  database.py  endpoints.py  interfaces.py  server.py
tests/: conftest.py
tests/machine_learning/: test_captioner.py  test_clip_embedder.py  test_clustering.py  test_facial_recognition.py  test_insight_facial_recognition.py  test_minicpm_visual_llm.py  test_object_detection.py  test_ocr.py  test_resnet_tesseract_ocr.py  test_visual_llm.py
(+162 files in other folders)
