[project]
name = "photos"
version = "2.0.0"
description = "Self-hosted photo and video management, including advanced search."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Ruurd Bijlsma", email = "ruurd@bijlsma.dev" }
]
dependencies = [
    "fastapi[standard]>=0.115.5",
    "media-analyzer>=0.1.2",
    "parsed-ffmpeg>=0.2.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.17",
    "pyvips>=2.2.3",
    "tqdm>=4.67.0",
]

[tool.ruff]
line-length = 100
exclude = ["scripts", "alembic"]
lint.ignore = ['S101', 'INP001', 'T201', 'S311', 'TRY003', 'PT018', 'PLR0913', 'COM812']
lint.select = ["ALL"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pylint>=3.3.2",
    "pyscan-rs>=0.1.6",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "types-passlib>=1.7.7.20240819",
    "types-python-dateutil>=2.9.0.20241206",
    "types-pytz>=2024.2.0.20241003",
    "types-tqdm>=4.66.0.20240417",
]