[project]
name = "scripts"
version = "0.1.0"
description = "Test scripts"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.31.0",
    "einops>=0.8.0",
    "insightface>=0.7.3",
    "llama-cpp-python>=0.3.2",
    "material-color-utilities>=0.1.0",
    "numpy>=2.1.3",
    "onnxruntime>=1.20.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "pybrisque>=1.0",
    "pytesseract>=0.3.13",
    "sentencepiece>=0.2.0",
    "timm>=1.0.12",
    "torch>=2.5.1",
    "tqdm>=4.67.0",
    "transformers>=4.46.2",
]
